# vecdb-wasm

./: .gitignore  README.md  embed-worker.js  index.html  serve.json
.github/workflows/: publish.yaml
docs/: README.md  api-reference.md  architecture.md  getting-started.md  guides.md
lib/: LICENSE  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
lib/src/: agent-memory.ts  embed-worker.ts  index.ts  types.ts  vrom-cache.ts  web.ts
pkg/: package.json  vecdb_wasm.d.ts  vecdb_wasm.js  vecdb_wasm_bg.wasm  vecdb_wasm_bg.wasm.d.ts
sdk/: demo.html  embed-worker.js  vecdb-sdk.js  vrom-cache.js
src/: Cargo.toml
src/rust/: hnsw.rs  lib.rs
src/src/: distance.rs  lib.rs
tools/: vrom_builder.py  vrom_cli.py
